# rasbt--LLMs-from-scratch

./: claude-a169-cwd  pyproject.toml
.claude/: settings.local.json
ch02/01_main-chapter-code/: README.md  ch02-prevod-srpski.txt  ch02.ipynb
ch03/: README.md
ch03/01_main-chapter-code/: ch03-prevod-srpski.txt
ch04/01_main-chapter-code/: ch04-prevod-srpski.txt
ch05/01_main-chapter-code/: ch05.ipynb
